# momentum_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/momentum_cpp/: momentum_basic.cpp
examples/momentum_py/: momentum_basic.py
include/momentum_sdk/: momentum_sdk.hpp  sensor_cache_manager.hpp
include/momentum_sdk/can/: can_exceptions.hpp  can_frame.hpp  can_interface.hpp  can_utilities.hpp
include/momentum_sdk/protocol/: barometric_messages.hpp  gps_messages.hpp  imu_messages.hpp  message_parser.hpp  signal_utils.hpp  system_messages.hpp
include/momentum_sdk/sensor_state/: barometric_data.hpp  gps_data.hpp  imu_data.hpp  system_state.hpp
python/: momentum_bindings.cpp
src/: momentum_sdk.cpp
src/can/: can_interface.cpp  can_utilities.cpp
src/protocol/: message_parser.cpp
