<?xml version="1.0"?>
<package format="3">
  <name>momentum_sdk</name>
  <version>1.0.0</version>
  <description>Momentum SDK with C++ core and Python bindings</description>
  <maintainer email="info@scalpelspace.com">ScalpelSpace</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pybind11</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
