<?xml version="1.0"?>
<package format="3">
  <name>momentum_sdk</name>
  <version>1.0.0</version>
  <description>Momentum SDK with C++ core and Python bindings</description>
  <maintainer email="info@scalpelspace.com">ScalpelSpace</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>pybind11_vendor</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pybind11_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
