[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6.0", "pybind11-stubgen>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momentum-sdk"
version = "1.0.0"
description = "Python bindings for Momentum SDK"
authors = [{name = "ScalpelSpace", email = "info@scalpelspace.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pybind11>=2.6.0"]
keywords = ["sensors", "can", "automotive", "robotics", "imu", "gps", "barometric"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]

[project.urls]
"Bug Reports" = "https://github.com/scalpelspace/momentum_sdk/issues"
"Source" = "https://github.com/scalpelspace/momentum_sdk"

[project.optional-dependencies]
dev = ["pytest>=6.0", "numpy", "matplotlib", "pybind11-stubgen>=0.10.0"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
